fixed issues when site is on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
 	width: 100%;
 	height: 100%;
 	cursor: default;
@@ -9,11 +10,14 @@ html, body {
 	-ms-user-select: none;
 	user-select: none;
 }
+
 body {
 	font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+
 .wrapper {
-	position: absolute;
+	display: table;
+	position: relative;
 	width: 100%;
 	height: 100%;
 	background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.7)), url('../resources/bg.jpg') no-repeat center center scroll;
@@ -22,30 +26,7 @@ body {
 	-o-background-size: cover;
 	background-size: cover;
 }
-.main {
-	left: 20%;
-	width: 60%;
-	height: 40%;
-	top: 30%;
-	position: absolute;
-	/*border: 1px black solid;*/
-	text-align: center;
-}
-.main h1 {
-	font-size: 4.5em;
-	color: #fff;
-	font-weight: 100;
-	text-transform: uppercase;
-	padding-top: 1em;
-}
-.main p {
-	color: #fff;
-	font-weight: 300;
-}
-.main .profile-pic {
-	width: 200px;
-	height: 200px;
-}
+
 .header-button {
 	border-radius: 0;
 	border-width: 2px;
@@ -56,37 +37,76 @@ body {
 	font-weight: 300;
 	width: 100px;
 }
+
+.main {
+	display: table-cell;
+	text-align: center;
+	vertical-align: middle;
+}
+
+.main h1 {
+	margin: 0;
+	padding: 0;
+	font-size: 4.5em;
+	color: #fff;
+	font-weight: 100;
+	text-transform: uppercase;
+}
+
+.main p {
+	color: #fff;
+	font-weight: 300;
+}
+
 .social-media-icons {
 	font-size: 20px;
-    padding: 15px 0;
+	padding: 15px 0;
 }
+
 .social-media-icons a {
 	color: white;
 }
+
 .social-media-icons i {
 	padding: 14px 10px;
 }
-.social-media-icons a:hover .fa-linkedin, .social-media-icons a:active .fa-linkedin {
+
+.social-media-icons a:hover .fa-linkedin,
+.social-media-icons a:active .fa-linkedin {
 	color: #0976b4;
 }
-.social-media-icons a:hover .fa-twitter, .social-media-icons a:active .fa-twitter {
+
+.social-media-icons a:hover .fa-twitter,
+.social-media-icons a:active .fa-twitter {
 	color: #55acee;
 }
-.social-media-icons a:hover .fa-github, .social-media-icons a:active .fa-github {
+
+.social-media-icons a:hover .fa-github,
+.social-media-icons a:active .fa-github {
 	color: #6cc644;
 }
-.social-media-icons a:hover .fa-google-plus, .social-media-icons a:active .fa-google-plus {
+
+.social-media-icons a:hover .fa-google-plus,
+.social-media-icons a:active .fa-google-plus {
 	color: #dd4b39;
 }
+
 .hvr-bounce-to-top:before {
 	background: white;
 }
-.hvr-bounce-to-top:hover, .hvr-bounce-to-top:focus, .hvr-bounce-to-top:active {
+
+.hvr-bounce-to-top:hover,
+.hvr-bounce-to-top:focus,
+.hvr-bounce-to-top:active {
 	color: black;
 }
+
 .hvr-bounce-to-right:before {
 	background: white;
 }
-.hvr-bounce-to-right:hover, .hvr-bounce-to-right:focus, .hvr-bounce-to-right:active {
+
+.hvr-bounce-to-right:hover,
+.hvr-bounce-to-right:focus,
+.hvr-bounce-to-right:active {
 	color: black;
 }
